made connect 4 renderer a little smaller to avoid vert scrollbar during gameplay

--- a/src/components/Game/index.css
+++ b/src/components/Game/index.css
@@ -19,7 +19,8 @@
 }
 
 .c4-jover-state {
-  width: 50vw;
+  height: 100%;
+  width: 50%;
 }
 
 @media (min-width: 0px) {
@@ -56,5 +57,5 @@
 
 .render-container {
   height: 100%;
-  width: 40vw;
+  width: 50%;
 }
